--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,7 +132,10 @@ services:
         condition: service_healthy
     env_file:
       - .env.local
-    command: ["python", "scripts/init_graph_db.py"]
+    volumes:
+      - .:/app:delegated 
+    working_dir: /app 
+    command: ["python", "-m", "src.scripts.init_graph_db"]    
 
 
 
