--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       --host 0.0.0.0
       --port 8000
       --reload
+      --reload-exclude 'flycheck_*.py'
     depends_on:
       firestore-emulator:
         condition: service_started
