testing local llm

--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,12 @@
 # Vector DB Configuration
-VECTOR_DB_TYPE=mock
-# Use mock services for development
-USE_MOCK_SERVICES=true
+VECTOR_DB_TYPE= local #mock
 
 # LLM Configuration (for when not using mock)
-EMBEDDING_TYPE=mock #local
+EMBEDDING_TYPE=local #mock 
+
+# Use mock services for development
+USE_MOCK_SERVICES=false
+
 
 LOCAL_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VERTEX_AI_LLM_MODEL=text-bison@001
@@ -44,7 +46,6 @@ GOOGLE_APPLICATION_CREDENTIALS=
 GCP_REGION=us-central1
 GCS_BUCKET_NAME=dev-bucket
 SECRET_KEY=dev-secret-key
-EMBEDDING_TYPE=local
 LOCAL_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VERTEX_AI_EMBEDDING_MODEL=textembedding-gecko@001
 EMBEDDING_DIMENSION=384
