testing with tiny-lamma [skip actions]

--- a/.env.local
+++ b/.env.local
@@ -7,6 +7,11 @@ EMBEDDING_TYPE=local #mock
 # Use mock services for development
 USE_MOCK_SERVICES=false
 
+# Local LLM
+USE_OLLAMA=true
+OLLAMA_MODEL=tinyllama
+OLLAMA_HOST=http://ollama:11434
+
 
 LOCAL_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VERTEX_AI_LLM_MODEL=text-bison@001
