testing [skip actions]

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ VECTOR_DB_TYPE= local #mock
 EMBEDDING_TYPE=local #mock 
 
 # Use mock services for development
-USE_MOCK_SERVICES=false
+USE_MOCK_SERVICES=true
 
 # Local LLM
 USE_OLLAMA=true
