fixed connections from GCP to arangoDB [skip actions]

--- a/.env.local
+++ b/.env.local
@@ -49,6 +49,6 @@ SECRET_KEY=dev-secret-key
 LOCAL_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VERTEX_AI_EMBEDDING_MODEL=textembedding-gecko@001
 EMBEDDING_DIMENSION=384
-NER_EXTRACTION_METHOD=spacy
+NER_EXTRACTION_METHOD=spacy  # or "llm"
 PDF_USE_OCR=false
 PDF_OCR_LANGUAGE=eng
