--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     build-essential \
     tesseract-ocr \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -24,3 +24,34 @@ EXPOSE 8000
 
 # Default command
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+
+
+
+# # Dockerfile.dev
+# FROM python:3.9-slim
+
+# # Install system dependencies needed for building some Python packages
+# RUN apt-get update && apt-get install -y \
+#     gcc \
+#     build-essential \
+#     tesseract-ocr \
+#     && rm -rf /var/lib/apt/lists/*
+
+# WORKDIR /app
+
+# # ✅ Copy only dependency files first to leverage caching
+# COPY requirements.txt requirements-dev.txt ./
+
+# # ✅ Install dependencies — this layer is cached unless requirements*.txt change
+# RUN pip install --upgrade pip && \
+#     pip install --no-cache-dir -r requirements.txt -r requirements-dev.txt
+
+# # ⛔ Do NOT copy your source here, so the volume mount overrides code at runtime
+# # Your app code comes from the host via volumes in docker-compose.
+
+# EXPOSE 8000
+
+# # Default command
+# CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
