fixed vertex ai vector db upserting & search methods [skip actions]

--- a/.env.cloud_dev
+++ b/.env.cloud_dev
@@ -9,6 +9,7 @@ GCP_REGION=us-central1
 # Vertex AI models
 VERTEX_AI_LLM_MODEL=text-bison@001
 VERTEX_AI_EMBEDDING_MODEL=textembedding-gecko@001
+VERTEX_AI_DEPLOYED_INDEX_ID=research_deployed_index_v1
 EMBEDDING_DIMENSION=768
 
 # Real GCP resources
