--- a/Dockerfile.cloud_dev
+++ b/Dockerfile.cloud_dev
@@ -18,7 +18,6 @@
 # CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8080"]
 
 
-
 # ------------------------------------
 # Stage 1: builder
 # ------------------------------------
@@ -34,14 +33,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt .
 RUN pip install --no-cache-dir --user -r requirements.txt
 
+# Pre-download ML models - VERIFY DOWNLOAD
+RUN python -c "from sentence_transformers import SentenceTransformer; model = SentenceTransformer('all-mpnet-base-v2'); print(f'Model downloaded: {model}')"
+RUN python -m spacy download en_core_web_sm
 
-
-# Download models and clean caches
-# Pre-download ML models
-RUN python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('all-MiniLM-L6-v2')"
-
-RUN python -m spacy download en_core_web_sm \
-    && rm -rf /root/.cache/huggingface /root/.cache/torch \
+# Cleanup - BUT PRESERVE MODEL CACHE
+RUN rm -rf /root/.cache/torch \
     && find /usr/local/lib/python3.11/site-packages -name "*.pyc" -delete
 
 # Copy app code
@@ -57,8 +54,9 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends tesseract-ocr \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 
-# Copy Python packages from builder (user site-packages)
+# Copy Python packages AND CACHE from builder
 COPY --from=builder /root/.local /root/.local
+COPY --from=builder /root/.cache /root/.cache  
 COPY --from=builder /app .
 
 # Make sure scripts in .local are usable
@@ -66,9 +64,6 @@ ENV PATH=/root/.local/bin:$PATH
 
 EXPOSE 8080
 CMD ["python", "-m", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8080"]
-
-# CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8080"]
-
 
 
 
