--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # Vector DB Configuration
-VECTOR_DB_TYPE= local #mock
+VECTOR_DB_TYPE= mock
 
 # LLM Configuration (for when not using mock)
 EMBEDDING_TYPE=local #mock 
@@ -49,6 +49,6 @@ SECRET_KEY=dev-secret-key
 LOCAL_EMBEDDING_MODEL=all-MiniLM-L6-v2
 VERTEX_AI_EMBEDDING_MODEL=textembedding-gecko@001
 EMBEDDING_DIMENSION=384
-NER_EXTRACTION_METHOD=spacy  # or "llm"
+NER_EXTRACTION_METHOD=kg_gen  # or "llm" or "spacy"
 PDF_USE_OCR=false
 PDF_OCR_LANGUAGE=eng
