--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
-pytest==7.4.0
-pytest-cov==4.1.0
-black==23.7.0
-flake8==6.0.0
-isort==5.12.0
-pytest-mock==3.12.0
+pytest #==7.4.0
+pytest-cov #==4.1.0
+black #==23.7.0
+flake8 #==6.0.0
+isort #==5.12.0
+pytest-mock #==3.12.0
 pytesseract
