testing and adding kg-gen for graph generation [skip actions]

--- a/.env.local
+++ b/.env.local
@@ -18,7 +18,7 @@ FIRESTORE_EMULATOR_HOST=firestore-emulator:8080
 
 # For local dev, you can use "dev-project"
 # For prod, set to your real GCP project ID
-GCP_PROJECT_ID=dev-project
+GCP_PROJECT_ID=kg-app-473211    #dev-project
 
 # Redis (local emulator)
 REDIS_HOST=redis
@@ -47,7 +47,7 @@ GCP_REGION=us-central1
 GCS_BUCKET_NAME=dev-bucket
 SECRET_KEY=dev-secret-key
 LOCAL_EMBEDDING_MODEL=all-MiniLM-L6-v2
-VERTEX_AI_EMBEDDING_MODEL=textembedding-gecko@001
+VERTEX_AI_EMBEDDING_MODEL=gemini-1.5-flash #textembedding-gecko@001
 EMBEDDING_DIMENSION=384
 NER_EXTRACTION_METHOD=kg_gen  # or "llm" or "spacy"
 PDF_USE_OCR=false
