fixing kg graph generation [skip actions]

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -17,8 +17,8 @@ WORKDIR /app
 COPY requirements.txt requirements-dev.txt ./
 
 # 3. Install Dependencies (Layer 3 - changes when the files above change, the slowest step)
-# Keep this as one line to minimize layers.
-RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt -r requirements-dev.txt
+# Keep this as one line to minimize layers.  --no-cache-dir
+RUN pip install --upgrade pip && pip install -r requirements.txt -r requirements-dev.txt
 
 # ⛔ IMPORTANT: The code is NOT copied here. It is VOLUME MOUNTED at runtime.
 
